[package]
name = "laba1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.27", features = ["full", "server"] }
futures = "0.3"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = "0.11"

serde = { version = "1", features = ["derive"] } 
serde_json = "1" 
actix-web = "4.0"
redis-async = "0.16.1"
redis = { version = "0.23.3", features = ["tokio-comp"] }